--- a/main.html
+++ b/main.html
@@ -86,13 +86,13 @@
                         <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
                     </div>
                     <div class="header__nav nav h4">
-                        <a href="#" class="nav__item nav__item--main">
+                        <a href="main.html" class="nav__item nav__item--main">
                             Главная
                         </a>
-                        <a href="#" class="nav__item nav__item--main">
+                        <a href="catalog.html" class="nav__item nav__item--main">
                             Каталог продукции
                         </a>
-                        <a href="#" class="nav__item nav__item--main">
+                        <a href="form.html" class="nav__item nav__item--main">
                             Подбор программы
                         </a>
                     </div>
