--- a/form.html
+++ b/form.html
@@ -97,7 +97,7 @@
         <div class="header">
 
             <div class="header__main-sect main-sect header__main-sect--catalog-indent">
-                <div class="header__warp header__warp--indent">
+                <div class="header__warp header__warp--push header__warp--indent">
                     <div class="header__logo logo">
                         <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
                         <img class="logo__mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
@@ -105,13 +105,13 @@
                         <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
                     </div>
                     <div class="header__nav nav h4">
-                        <a href="main.html" class="nav__item">
+                        <a href="main.html" class="nav__item nav__item--border">
                             Главная
                         </a>
-                        <a href="catalog.html" class="nav__item">
+                        <a href="catalog.html" class="nav__item nav__item--border">
                             Каталог продукции
                         </a>
-                        <a href="form.html" class="nav__item active">
+                        <a href="form.html" class="nav__item nav__item--border active">
                             Подбор программы
                         </a>
                     </div>
@@ -168,7 +168,7 @@
                     <div class="select__desktop">
                         <div class="select__item cat-input select__item--amind select__item--bad select__item--indent">
                             <label for="email">E-mail:*</label>
-                            <input id="email" type="text" value="kuklachev@gmail.com" class="cat-input__input">
+                                <input id="email" type="text" value="kuklachev@gmail.com" class="cat-input__input cat-input__input--amind">
                             <div class="cat-input__icon-set">
                                 <svg class="svg">
                                     <use xlink:href="#icon-mail"></use>
@@ -177,7 +177,7 @@
                         </div>
                         <div class="select__item cat-input select__item--amind select__item--indent">
                             <label for="phone">Телефон:*</label>
-                            <input id="phone" type="text" value="8 (960) 900-60-90" class="cat-input__input">
+                            <input id="phone" type="text" value="8 (960) 900-60-90" class="cat-input__input cat-input__input--amind">
                             <div class="cat-input__icon-set">
                                 <svg class="svg">
                                     <use xlink:href="#icon-phone "></use>
