--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="header">
 
             <div class="header__main-sect main-sect header__main-sect--catalog-indent">
-                <div class="header__warp header__warp--indent">
+                <div class="header__warp header__warp--push header__warp--indent">
                     <div class="header__logo logo">
                         <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
                         <img class="logo__mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
@@ -92,13 +92,13 @@
                         <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
                     </div>
                     <div class="header__nav nav h4">
-                        <a href="main.html#" class="nav__item">
+                        <a href="main.html" class="nav__item nav__item--border">
                             Главная
                         </a>
-                        <a href="catalog.html" class="nav__item active">
+                        <a href="catalog.html" class="nav__item nav__item--border active">
                             Каталог продукции
                         </a>
-                        <a href="form.html" class="nav__item">
+                        <a href="form.html" class="nav__item nav__item--border">
                             Подбор программы
                         </a>
                     </div>
@@ -283,7 +283,21 @@
                         <div class="element__button btn btn-secondary">ПоказатЬ все</div>
                     </div>
             </div>
+            </div>
         </div>
+
+
+        <div class="grid zel zel--border">
+            <div class="grid__items row">
+                <div class="grid__col-9">
+                    <div class="grid__items row">
+                        <div class="zel__block grid__col-4 bg-orange"></div>
+                        <div class="zel__block grid__col-4 bg-cyan"></div>
+                        <div class="zel__block grid__col-4 bg-violet"></div>
+                    </div>
+                </div>
+                <div class="zel grid__col-3 bg-green"></div>
+            </div>
         </div>
 
         <div class="additional">
@@ -294,6 +308,7 @@
                     </div>
                 </div>
                 <div class="additional__desktop">
+
                     <div class="additional__items additional__items--indent">
                         <div class="additional__item additional__item--border  additional__item---push additional__item--indent">
                             <div class="additional__tablet additional__tablet--indent">
@@ -305,6 +320,7 @@
                             </div>
                             <div class="additional__button btn btn-primary">Заказать</div>
                         </div>
+
                         <div class="additional__item additional__item--border  additional__item---push additional__item--indent">
                             <div class="additional__tablet additional__tablet--indent">
                                 <div class="additional__item-name additional__item-name--indent">Питьевая вода</div>
@@ -315,6 +331,7 @@
                             </div>
                             <div class="additional__button btn btn-primary">Заказать</div>
                         </div>
+
                         <div class="additional__item additional__item--border  additional__item---push additional__item--indent">
                             <div class="additional__tablet additional__tablet--indent">
                                 <div class="additional__item-name additional__item-name--indent">Молоко</div>
@@ -325,6 +342,7 @@
                             </div>
                             <div class="additional__button btn btn-primary">Заказать</div>
                         </div>
+
                         <div class="additional__item additional__item--border  additional__item---push additional__item--indent">
                             <div class="additional__tablet additional__tablet--indent">
                                 <div class="additional__item-name additional__item-name--indent">Витамины</div>
@@ -336,6 +354,7 @@
                             <div class="additional__button btn btn-primary">Заказать</div>
                         </div>
                     </div>
+
                     <div class="additional__photo additional__photo--bg additional__photo--color additional__photo--indent">
                         <div class="additional__gift additional__gift--indent">
                             <svg class="svg">
@@ -348,8 +367,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="zel1"></div>
 
 
         <div class="map map--push">
