--- a/main.html
+++ b/main.html
@@ -78,21 +78,21 @@
         <div class="header header__bg-cat">
 
             <div class="header__main-sect main-sect header__main-sect--indent">
-                <div class="header__warp header__warp--for-cat header__warp--indent">
-                    <div class="header__logo logo">
+                <div class="header__warp header__warp--for-cat header__warp--push header__warp--indent">
+                    <div class="header__logo logo nav__item--border">
                         <img class="logo__mobile" src="img/logo-mobile.png" alt="CAT-ENERGY">
                         <img class="logo__mobile-text" src="img/logo-mobile-header.png" alt="CAT-ENERGY">
                         <img class="logo__tablet" src="img/logo-tablet.png" alt="CAT-ENERGY">
                         <img class="logo__desktop" src="img/logo-desktop.png" alt="CAT-ENERGY">
                     </div>
                     <div class="header__nav nav h4">
-                        <a href="main.html" class="nav__item nav__item--main">
+                        <a href="main.html" class="nav__item nav__item--border nav__item--main active">
                             Главная
                         </a>
-                        <a href="catalog.html" class="nav__item nav__item--main">
+                        <a href="catalog.html" class="nav__item nav__item--border nav__item--main">
                             Каталог продукции
                         </a>
-                        <a href="form.html" class="nav__item nav__item--main">
+                        <a href="form.html" class="nav__item nav__item--border nav__item--main">
                             Подбор программы
                         </a>
                     </div>
@@ -347,3 +347,5 @@
 
 </body>
 </html>
+
+
